--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-  margin:0 auto;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+.mainDiv {
+  margin: 0 auto !important;
+}
+
+.mainDiv * {
+  margin: 0 auto !important;
 }
