--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,15 @@
   box-sizing: border-box;
 }
 
+.bar {
+  position: fixed;
+  z-index:100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0.5vmin;
+  transform-origin: 0;
+  transform: translate3d(0, 0, 0);
+  background: rgb(245, 73, 51);
+  border-radius: 25px;
+}
